set up for building release distributions